--- a/0.overview/0.Qt overview.md
+++ b/0.overview/0.Qt overview.md
@@ -1,9 +1,9 @@
 >参考书目：
 >Nibedit Dey, 
->Cross-Platform Development with Qt 6 and Modern C++
+>Cross-Platform Development with Qt 6 and Modern C++ : 
 Design and build applications with modern graphical user interfaces without worrying about platform dependency
 
-Qt (pronounced cute, not que-tee) is a cross-platform application development framework designed to create great software applications with uniform user interfaces (UIs) for desktop, embedded, and mobile platforms.  
+**Qt** (pronounced cute, not que-tee) is a cross-platform application development framework designed to create great software applications with uniform **user interfaces (UIs)** for desktop, embedded, and mobile platforms. 
 It provides developers with a great set of tools to design and build great applications without worrying about platform dependency. 
 
 
