--- a/0.overview/0.Qt overview.md
+++ b/0.overview/0.Qt overview.md
@@ -5,6 +5,17 @@ Design and build applications with modern graphical user interfaces without worr
 
 **Qt** (pronounced cute, not que-tee) is a cross-platform application development framework designed to create great software applications with uniform **user interfaces (UIs)** for desktop, embedded, and mobile platforms.  
 It provides developers with a great set of tools to design and build great applications without worrying about platform dependency. 
+```
+Qt
+(pronounced cute, not que-tee) 
+	is a cross-platform application development framework 
+		designed to create great software applications 
+							with uniform user interfaces (UIs) 
+							for desktop, embedded, and mobile platforms.
+	provides developers with a great set of tools 
+	to design and build great applications 
+		without worrying about platform dependency. 
+```
 
 
 
@@ -12,11 +23,50 @@ Qt is a cross-platform software development framework for desktop, embedded, and
 It follows the philosophy of code less, create more, and deploy everywhere.  
 It supports platforms such as Windows, Linux, macOS, VxWorks, QNX, Android, iOS, and so on.   
 The software also supports several microcontroller units (MCUs) from NXP, Renesas, and STMicroelectronics running on bare metal or FreeRTOS.
+```
+Qt 
+	is a cross-platform software development framework 
+		for desktop, embedded, and mobile platforms.
+	follows the philosophy 
+					of code less, create more, and deploy everywhere.
+	supports platforms 
+		such as Windows, Linux, macOS, 
+				VxWorks, QNX, 
+				Android, iOS, 
+			and so on.
+	also supports several microcontroller units (MCUs) 
+					from NXP, Renesas, and STMicroelectronics 
+							running on bare metal or FreeRTOS.
+```
+
+
+
 
 Qt was born as an attempt to provide a uniform graphical user interface (GUI) with the same look, feel, and functionality across different platforms.  
 Qt accomplishes that by providing a framework to write code once and ensure that it runs on other platforms with minimal or no modifications.  
 It is not a programming language, but rather a framework written in C++.  
 The Qt framework and tools are dual-licensed under open source and commercial licenses.
+```
+Qt 
+	was born 
+		as an attempt 
+			to provide a uniform graphical user interface (GUI) 
+						with the same look, feel, and functionality
+                        			across different platforms.  
+	accomplishes that 
+		by providing a framework 
+			to write code once 
+				and ensure that 
+								it runs on other platforms 
+									with minimal or no modifications.
+	is not a programming language, 
+		but rather a framework written in C++.
+	framework and tools 
+		are dual-licensed 
+			under open source and commercial licenses.
+```
+
+
 
 Qt uses a modular approach to group related functionalities together.  
 Qt Essentials are the foundation of Qt on all platforms.  
@@ -26,9 +76,45 @@ Examples of Qt Essentials modules are Qt Core, Qt GUI, Qt QML, Qt Widgets, and s
 There are also special-purpose add-on modules that provide specific functionalities and come with certain license obligations.  
 Examples of add-on modules are Qt 3D, Qt Bluetooth, Qt Charts, Qt Data Visualization, and more.  
 As well as this, there are value-added modules such as Qt Automotive Suite, Qt for Device Creation, and Qt for MCUs, among others available under the commercial license.
+```
+Qt 
+	uses a modular approach 
+		to group related functionalities together.  
+	Essentials 
+		are the foundation of Qt on all platforms.  
+These modules 
+	are general and useful for most Qt-based applications.  
+Essential modules 
+	are available for open source usage.  
+	Examples of Qt Essentials modules 
+		are Qt Core, 
+			Qt GUI, 
+			Qt QML, 
+			Qt Widgets, 
+		and so on.  
+There are also 
+special-purpose add-on modules 
+				that provide specific functionalities 
+					and come with certain license obligations.  
+	Examples of add-on modules 
+		are Qt 3D, 
+			Qt Bluetooth, 
+			Qt Charts, 
+			Qt Data Visualization, 
+		and more.  
+As well as this, 
+there are value-added modules 
+			such as Qt Automotive Suite, 
+					Qt for Device Creation, 
+				and Qt for MCUs, 
+		among others available under the commercial license.
+```
 
 
-To find out more about different Qt modules, visit https://doc.qt.io/qt-6/qtmodules.html.
+
+
+
+>To find out more about different Qt modules, visit https://doc.qt.io/qt-6/qtmodules.html.
 
 
 Qt was released for public use in 1995.  
@@ -36,6 +122,23 @@ Since then, there have been many improvements and major changes.
 Qt 6 is the new major version of Qt.  
 Its main goals are to remain prepared for the requirements coming in 2020 and beyond, remove obsolete modules, and be more maintainable.  
 With this focus, there are architectural changes in Qt 6 that may break some level of backward compatibility with earlier versions.
+```
+Qt 
+	was released for public use in 1995.  
+Since then, 
+	there have been many improvements and major changes.  
+Qt 6 
+	is the new major version of Qt.  
+	Its main goals 
+		are to remain prepared for the requirements 
+									coming in 2020 and beyond, 
+				remove obsolete modules, 
+			and be more maintainable.
+With this focus, 
+	there are architectural changes in Qt 6 
+				that may break some level of backward compatibility 
+												with earlier versions.
+```
 
 
 
@@ -49,6 +152,17 @@ Some essential modifications in Qt 6 are outlined here:
 • Support for hiding implementation details  
 • Better integration of tools  
 
+```
+Some essential modifications in Qt 6 are outlined here:  
+• Introduction of strong typing  
+• JavaScript as an optional feature of Qt Modeling Language (QML)  
+• Removal of QML versioning  
+• Removal of the duplicate data structures between QObject and QML  
+• Avoidance of the creation of runtime data structures  
+• Compilation of QML into efficient C++ and native code  
+• Support for hiding implementation details  
+• Better integration of tools  
+```
 
 
 Reasons for using Qt
