--- a/0.overview/0.Qt overview.md
+++ b/0.overview/0.Qt overview.md
@@ -88,7 +88,9 @@ There are also special-purpose add-on modules that provide specific functionalit
 Examples of add-on modules are Qt 3D, Qt Bluetooth, Qt Charts, Qt Data Visualization, and more.  
 As well as this, there are value-added modules such as Qt Automotive Suite, Qt for Device Creation, and Qt for MCUs, among others available under the commercial license.
 Qt使用模块化方法，编组相关功能。
-。。。。
+Qt Essentials是Qt的所有平台的基础。
+这些模块是通用的，并且用于大多数基于Qt的应用程序。
+
 ```
 Qt 
 	uses a modular approach 
