--- a/0.overview/0.Qt overview.md
+++ b/0.overview/0.Qt overview.md
@@ -3,13 +3,50 @@
 >Cross-Platform Development with Qt 6 and Modern C++ : 
 Design and build applications with modern graphical user interfaces without worrying about platform dependency
 
-**Qt** (pronounced cute, not que-tee) is a cross-platform application development framework designed to create great software applications with uniform **user interfaces (UIs)** for desktop, embedded, and mobile platforms.  
+>要想用我的方式去表达，根本不需要母语化书本内容，只需看懂它们的表达逻辑即可。
+
+我的表达逻辑：
+
+
+
+
 Qt
 (读作`cute`，并非`que-tee`)
 一个跨平台应用开发框架
 它的目标是：为桌面平台、嵌入式平台及移动平台，创建具有同风格用户界面（UI）的优秀软件应用。
-It provides developers with a great set of tools to design and build great applications without worrying about platform dependency. 
+
 它提供一套很棒的工具，使得开发者（不考虑平台依赖性的情况下）设计并构建优秀应用。
+
+
+它遵循的理念是："code less, create more, and deploy everywhere"
+它支持的平台有：Windows, Linux, macOS, VxWorks, QNX, Android, iOS ……
+
+Qt的初衷是：在不同的平台上，提供统一（即具有相同的外观、感觉和功能）的图形用户界面（GUI）  
+为此，它提供了一个框架，使得可以一次编码，（只进行少量的修改，甚至无需修改）就可以确保多平台运行。
+它虽然不是编程语言，但它是用C++编写的框架。
+在开源和商业许可协议下，Qt框架和工具受到了双重授权（dual-licensed）的保护。
+
+
+
+Qt使用模块化方法，编组相关功能。
+Qt Essentials是Qt的所有平台的基础。
+这些模块是通用的，并且用于大多数基于Qt的应用程序。
+
+
+
+
+
+
+
+
+# -------------------------------
+
+参考书：
+
+原文：
+**Qt** (pronounced cute, not que-tee) is a cross-platform application development framework designed to create great software applications with uniform **user interfaces (UIs)** for desktop, embedded, and mobile platforms.  
+It provides developers with a great set of tools to design and build great applications without worrying about platform dependency.   
+表达逻辑：
 ```
 Qt
 (pronounced cute, not que-tee) 
@@ -24,11 +61,10 @@ Qt
 
 
 
+
 Qt is a cross-platform software development framework for desktop, embedded, and mobile platforms.  
 It follows the philosophy of code less, create more, and deploy everywhere.  
 It supports platforms such as Windows, Linux, macOS, VxWorks, QNX, Android, iOS, and so on.   
-它遵循的理念是："code less, create more, and deploy everywhere"
-它支持的平台有：Windows, Linux, macOS, VxWorks, QNX, Android, iOS ……
 The software also supports several microcontroller units (MCUs) from NXP, Renesas, and STMicroelectronics running on bare metal or FreeRTOS.
 ```
 Qt 
@@ -53,10 +89,7 @@ Qt was born as an attempt to provide a uniform graphical user interface (GUI) wi
 Qt accomplishes that by providing a framework to write code once and ensure that it runs on other platforms with minimal or no modifications.  
 It is not a programming language, but rather a framework written in C++.  
 The Qt framework and tools are dual-licensed under open source and commercial licenses.
-Qt的初衷是：在不同的平台上，提供统一（即具有相同的外观、感觉和功能）的图形用户界面（GUI）  
-为此，它提供了一个框架，使得可以一次编码，（只进行少量的修改，甚至无需修改）就可以确保多平台运行。
-它虽然不是编程语言，但它是用C++编写的框架。
-在开源和商业许可协议下，Qt框架和工具受到了双重授权（dual-licensed）的保护。
+
 ```
 Qt 
 	was born 
@@ -87,10 +120,6 @@ Examples of Qt Essentials modules are Qt Core, Qt GUI, Qt QML, Qt Widgets, and s
 There are also special-purpose add-on modules that provide specific functionalities and come with certain license obligations.  
 Examples of add-on modules are Qt 3D, Qt Bluetooth, Qt Charts, Qt Data Visualization, and more.  
 As well as this, there are value-added modules such as Qt Automotive Suite, Qt for Device Creation, and Qt for MCUs, among others available under the commercial license.
-Qt使用模块化方法，编组相关功能。
-Qt Essentials是Qt的所有平台的基础。
-这些模块是通用的，并且用于大多数基于Qt的应用程序。
-
 ```
 Qt 
 	uses a modular approach 
